ДЗ к уроку 3.2 выполнено.